@@ -9,25 +9,22 @@
 #include <vector>
 
 #include "hedgehog.h"
+#include "fmtio_concepts.h"
 
 namespace launch {
-	template <typename T>
-	concept Readable = requires(std::istream& in, T& x) {
-		{ in >> x } -> std::same_as<std::istream&>;
-	};
 
 	void fmtout(const std::string& fmt, const hedgehog& captures = {}, std::ostream& out = std::cout);
 
-	template <Readable T>
+	template <readable T>
 	void fmtin_process(hedgehog& container, std::istream& in) {
 		T temp;
 		in >> temp;
 		container.push_back(temp);
 	}
 
-	template <Readable... Args>
+	template <readable... Ts>
 	void fmtin(hedgehog& container, std::istream& in = std::cin) {
-		(fmtin_process<Args>(container, in), ...);
+		(fmtin_process<Ts>(container, in), ...);
 	}
 }
 
