@@ -1,3 +1,4 @@
 #pragma once
 
+#include "goodrand_concepts.h"
 #include "goodrand_impl.h"
