@@ -1,3 +1,4 @@
 #pragma once
 
+#include "hedgehog_concepts.h"
 #include "hedgehog_impl.h"
